Barra de navegacion en el perfil y el home

--- a/FrontEnd/index_home.html
+++ b/FrontEnd/index_home.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SpaceFace</title>
+    <link rel="stylesheet" href="styles/style_home.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="left-section">
+                <a href="#"><img src="logo.png" alt="SpaceFace Logo"></a>
+                <span>SpaceFace</span>
+            </div>
+            <div class="right-section">
+                <a href="index_profile.html"><button class="profile-button"><img src="logos/profile_icon.png" alt="Icono de Perfil"></button></a>
+                <button class="messages-button"><img src="logos/messages_icon.png" alt="Icono de Mensajes"></button>
+                <button class="logout-button"><img src="logos/logOut_icon.png" alt="Cerrar Sesión" id="logout-button"></button>
+            </div>
+        </nav>
+    </header>
+    <!-- Contenido de la página -->
 </body>
 </html>
