--- a/FrontEnd/index_messages.html
+++ b/FrontEnd/index_messages.html
@@ -10,12 +10,11 @@
     <header>
         <nav>
             <div class="left-section">
-                <a><img src="logos/profile_icon.png" alt="Aca debe ir la imagen del perfil"></a>
-                <span>Aca va el nombre del Perfil</span>
+                <a><img src="logos/messages_icon.png" alt="Esta es la seccion de los Mensajes"></a>
+                <span>Mensajeria</span>
             </div>
             <div class="right-section">
                 <a href="index_home.html"><button class="home-button"><img src="logos/home_icon.png" alt=""></button></a>
-                <a href="index_messages.html"><button class="messages-button"><img src="logos/messages_icon.png" alt="Icono de Mensajes"></button></a>
                 <button class="logout-button"><img src="logos/logOut_icon.png" alt="Cerrar Sesión" id="logout-button"></button>
             </div>
         </nav>
