Actualizacion de logicas

--- a/FrontEnd/index_profile.html
+++ b/FrontEnd/index_profile.html
@@ -20,6 +20,21 @@
             </div>
         </nav>
     </header>
-    <!-- Contenido de la página -->
+    <main>
+        <h1>Mi galeria</h1>
+        <input type="file" name="img" id="file-input" multiple>
+        <button id="file-select-button">Elegir foto</button><span>No se ha escogido alguna foto</span>
+
+        <button id="upload-button">Subir foto</button>
+
+        <div class="selected.files-container">
+            <span>Archivos a subir</span>
+            <span class="selected-files"></span>
+        </div>
+
+        <div class = "mainCont_grid">
+            <!-- Aca quiero que vayan las imagenes que yo suba-->
+        </div>
+    </main>
 </body>
 </html>
