--- a/FrontEnd/index_profile.html
+++ b/FrontEnd/index_profile.html
@@ -14,26 +14,37 @@
                 <span>Aca va el nombre del Perfil</span>
             </div>
             <div class="right-section">
-                <a href="index_home.html"><button class="home-button"><img src="logos/home_icon.png" alt=""></button></a>
-                <a href="index_messages.html"><button class="messages-button"><img src="logos/messages_icon.png" alt="Icono de Mensajes"></button></a>
-                <button class="logout-button"><img src="logos/logOut_icon.png" alt="Cerrar Sesión" id="logout-button"></button>
+                <a href="index_profile2.html"><button class="profile2-button" data-tooltip="Perfil de publicaciones"><img src="logos/profile2_icon.png" alt=""></button></a>
+                <a href="index_home.html"><button class="home-button" data-tooltip="Inicio"><img src="logos/home_icon.png" alt=""></button></a>
+                <a href="index_messages.html"><button class="messages-button" data-tooltip="Mensajes"><img src="logos/messages_icon.png" alt="Icono de Mensajes"></button></a>
+                <button class="logout-button" data-tooltip="Cerrar Sesión"><img src="logos/logOut_icon.png" alt="Cerrar Sesión" id="logout-button"></button>
             </div>
         </nav>
     </header>
     <main>
         <h1>Mi galeria</h1>
-        <input type="file" name="img" id="file-input" multiple>
-        <button id="file-select-button">Elegir foto</button><span>No se ha escogido alguna foto</span>
-
-        <button id="upload-button">Subir foto</button>
-
-        <div class="selected.files-container">
-            <span>Archivos a subir</span>
-            <span class="selected-files"></span>
+        <div class="info">
+            <div class="info-item" data-tooltip="Solicitudes">
+                <img src="logos/add_friend_icon.png" alt="Ícono de solicitudes">
+                <span>Solicitudes</span>
+            </div>
+            <div class="info-item" data-tooltip="Publicaciones">
+                <img src="logos/cantidad_publicaciones_icon.png" alt="Ícono de cantidad de publicaciones">
+                <span>Publicaciones</span>
+            </div>
+            <div class="info-item" data-tooltip="Amigos">
+                <img src="logos/friends_icon.png" alt="Ícono de amigos">
+                <span>Amigos</span>
+            </div>
         </div>
-
         <div class = "mainCont_grid">
             <!-- Aca quiero que vayan las imagenes que yo suba-->
+            <div><img src="logos/imagen_prueba.jpg" alt=""></div>
+            <div><img src="logos/imagen_prueba.jpg" alt=""></div>
+            <div><img src="logos/imagen_prueba.jpg" alt=""></div>
+            <div><img src="logos/imagen_prueba.jpg" alt=""></div>
+            <div><img src="logos/imagen_prueba.jpg" alt=""></div>
+            <div><img src="logos/imagen_prueba.jpg" alt=""></div>
         </div>
     </main>
 </body>
