Solucion de errores
Se soluciono el error de que no permitia elegir imagenes en el perfil vacio

--- a/FrontEnd/index_profile2.html
+++ b/FrontEnd/index_profile2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Perfil</title>
     <link rel="stylesheet" href="styles/style_profile.css">
+    <script src="logics_pages/logic_profile.js" defer></script>
 </head>
 <body>
     <header>
